--- a/oauth2-sso/auth-server-sso/src/main/resources/static/login.html
+++ b/oauth2-sso/auth-server-sso/src/main/resources/static/login.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>江南一点雨</title>
+    <title>title</title>
 
     <link rel="stylesheet" href="css/font-awesome-4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
@@ -39,7 +39,7 @@
         <div class="material-button alt-2">
             <span class="shape"></span>
         </div>
-        <div class="title">江南一点雨-注册</div>
+        <div class="title">注册</div>
         <div class="input">
             <label for="regname">用户名</label>
             <input type="text" name="regname" id="regname">
